<resources>
    <string name="app_name">TheOneThing</string>
    <string name="enter_e_mail">enter e-mail</string>
    <string name="your_pass_hint">your pass</string>
    <string name="login_text_button">login</string>
    <string name="login_button">login</string>
    <string name="registration_button">registration</string>
    <string name="registration_c_d">registration</string>
    <string name="your_one_thing">YOUR ONE THING</string>
    <string name="your_one_thing_for_current_year">Your one thing for current Year</string>
    <string name="one_thing_for_current_year">one thing for current Year</string>
    <string name="year">YEAR</string>
    <string name="time_period">time period</string>
    <string name="edit_year_task">edit year task</string>
    <string name="add_year_task">add year task</string>
    <string name="done_or_undone_year_task">done or undone year task</string>
    <string name="delete_year_task">delete year task</string>
    <string name="yor_one_thing_for_current_month">Yor one thing for current month</string>
    <string name="month_task_title">month task title</string>
    <string name="month">MONTH</string>
    <string name="month_time_period">month time period</string>
    <string name="edit_month_task">edit month task</string>
    <string name="add_month_task">add month task</string>
    <string name="done_or_undone_month_task">done or undone month task</string>
    <string name="delete_month_task">delete month task</string>
    <string name="yor_one_thing_for_current_week">Yor one thing for current week</string>
    <string name="title_week_task">title week task</string>
    <string name="week">WEEK</string>
    <string name="week_time_period">week time period</string>
    <string name="edit_week_task">edit week task</string>
    <string name="add_week_task">add week task</string>
    <string name="delete_week_task">delete week task</string>
    <string name="done_or_undone_week_task">done or undone week task</string>
    <string name="yor_one_thing_for_current_day">Yor one thing for current day</string>
    <string name="day_task_title">day task title</string>
    <string name="day">DAY</string>
    <string name="day_time_period">day time period</string>
    <string name="edit_day_task">edit day task</string>
    <string name="add_day_task">add day task</string>
    <string name="delete_day_task">delete day task</string>
    <string name="done_or_undone_day_task">done or undone day task</string>
    <string name="download_from_fb">download from FB</string>
    <string name="upload_to_fb">upload to FB</string>
    <string name="start_job">start the synchronization service</string>
    <string name="stop_job">stop the synchronization service </string>
    <string name="_18_07_18">18.07.18</string>
    <string name="date">date</string>
    <string name="title_your_tsk">Title Your Tsk</string>
    <string name="title_of_task">title of task</string>
    <string name="description_of_task">description of task</string>
    <string name="done_or_undone">done or undone</string>
    <string name="photo">photo</string>
    <string name="completeness">completeness</string>
    <string name="set_emotion_meh">set emotion meh</string>
    <string name="set_emotion_smile">set emotion smile</string>
    <string name="set_emotion_frown">set emotion frown</string>
    <string name="add_photo_by_camera">add photo by camera</string>
    <string name="_0">0 %</string>
    <string name="percent_of_completeness">percent of completeness</string>
    <string name="save_changes">save changes</string>
    <string name="main_tasks">Main Tasks</string>
    <string name="tasks">TASKS: </string>
    <string name="description_your_task">description your task</string>
    <string name="task_description">Task description</string>
    <string name="done">done</string>
    <string name="emotions">emotions</string>
    <string name="task_title">Task Title</string>
    <string name="title_of_your_task">title of your task</string>
    <string name="_13_08_18">13.08.18</string>
    <string name="_99">99%</string>
    <string name="show_all_tasks">show all tasks</string>
    <string name="task_for_year">Tasks for Year</string>
    <string name="tasks_for_month">Tasks for Month</string>
    <string name="tasks_for_week">Tasks for Week</string>
    <string name="tasks_for_day">Tasks for Day</string>
    <string name="no_active_tasksk">YOU HAVE NO ACTIVE TASKS!</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="job_run">job run!</string>
    <string name="job_canceled">job canceled</string>
    <string name="auth_failed">Authentication failed.</string>

</resources>
