<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/color_for_ic_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tv_item_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/task_description"
        android:contentDescription="@string/description_your_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_emotions_on_item"
        app:layout_constraintStart_toEndOf="@+id/btn_done_in_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_in_item" />

        <Button
            android:id="@+id/btn_done_in_item"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/done"
            android:background="@drawable/circular_check_box_button_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_emotions_on_item"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circular_face_meh_button_unselected"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/emotions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_in_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/task_title"
        android:contentDescription="@string/title_of_your_task"
        app:layout_constraintEnd_toStartOf="@+id/img_emotions_on_item"
        app:layout_constraintStart_toEndOf="@+id/btn_done_in_item"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date_in_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_13_08_18"
        android:contentDescription="@string/date"
        app:layout_constraintEnd_toEndOf="@+id/btn_done_in_item"
        app:layout_constraintStart_toStartOf="@+id/btn_done_in_item"
        app:layout_constraintTop_toBottomOf="@+id/btn_done_in_item" />

    <TextView
        android:id="@+id/tv_completion_in_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_99"
        android:contentDescription="@string/completeness"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_emotions_on_item"
        app:layout_constraintStart_toStartOf="@+id/img_emotions_on_item"
        app:layout_constraintTop_toBottomOf="@+id/img_emotions_on_item" />

    </android.support.constraint.ConstraintLayout>




